--- a/docs-ref-autogen/azure-iot-common/ConnectionString.yml
+++ b/docs-ref-autogen/azure-iot-common/ConnectionString.yml
@@ -143,4 +143,4 @@ items:
           optional: true
       return:
         type:
-          - '@azure-iot-common.ConnectionString'
+          - azure-iot-common.ConnectionString
