--- a/docs-ref-autogen/azure-iot-common/ExponentialBackOffWithJitter.yml
+++ b/docs-ref-autogen/azure-iot-common/ExponentialBackOffWithJitter.yml
@@ -76,7 +76,7 @@ items:
       content: 'normalParameters: ExponentialBackoffWithJitterParameters'
       return:
         type:
-          - '@azure-iot-common.ExponentialBackoffWithJitterParameters'
+          - azure-iot-common.ExponentialBackoffWithJitterParameters
   - uid: azure-iot-common.ExponentialBackOffWithJitter.throttledParameters
     name: throttledParameters
     fullName: throttledParameters
@@ -91,7 +91,7 @@ items:
       content: 'throttledParameters: ExponentialBackoffWithJitterParameters'
       return:
         type:
-          - '@azure-iot-common.ExponentialBackoffWithJitterParameters'
+          - azure-iot-common.ExponentialBackoffWithJitterParameters
   - uid: azure-iot-common.ExponentialBackOffWithJitter.nextRetryTimeout
     name: nextRetryTimeout
     children: []
