--- a/docs-ref-autogen/azure-iot-common/RetryOperation.yml
+++ b/docs-ref-autogen/azure-iot-common/RetryOperation.yml
@@ -25,7 +25,7 @@ items:
       parameters:
         - id: policy
           type:
-            - '@azure-iot-common.RetryPolicy'
+            - azure-iot-common.RetryPolicy
           description: >-
             The retry policy to be used for this operation, which determines
             what error is "retryable" or not and how fast to retry.
