--- a/docs-ref-autogen/azure-iot-device/HttpReceiverOptions.yml
+++ b/docs-ref-autogen/azure-iot-device/HttpReceiverOptions.yml
@@ -98,3 +98,9 @@ items:
       return:
         type:
           - boolean
+references:
+  - uid: azure-iot-device.Client.Transport
+    spec.typeScript:
+      - name: Transport
+        fullName: Transport
+        uid: azure-iot-device.Client.Transport
