--- a/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
+++ b/docs-ref-autogen/azure-iot-device/SharedAccessKeyAuthenticationProvider.yml
@@ -98,4 +98,4 @@ items:
           optional: true
       return:
         type:
-          - '@azure-iot-device.SharedAccessKeyAuthenticationProvider'
+          - azure-iot-device.SharedAccessKeyAuthenticationProvider
