--- a/docs-ref-autogen/azure-iot-provisioning-device/RegistrationResult.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/RegistrationResult.yml
@@ -9,5 +9,11 @@ items:
     type: interface
     summary: Device configuration returned when registration is complete
     extends:
-      name: '@azure-iot-provisioning-device.DeviceRegistrationState'
+      name: azure-iot-provisioning-device.DeviceRegistrationState
     package: azure-iot-provisioning-device
+references:
+  - uid: azure-iot-provisioning-device.DeviceRegistrationState
+    spec.typeScript:
+      - name: DeviceRegistrationState
+        fullName: DeviceRegistrationState
+        uid: azure-iot-provisioning-device.DeviceRegistrationState
