--- a/docs-ref-autogen/azure-iot-provisioning-service/IndividualEnrollment.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/IndividualEnrollment.yml
@@ -32,7 +32,7 @@ items:
       content: 'attestation: AttestationMechanism'
       return:
         type:
-          - '@azure-iot-provisioning-service.AttestationMechanism'
+          - azure-iot-provisioning-service.AttestationMechanism
   - uid: azure-iot-provisioning-service.IndividualEnrollment.createdDateTimeUtc
     name: createdDateTimeUtc
     fullName: createdDateTimeUtc
@@ -91,7 +91,7 @@ items:
       content: 'initialTwin: InitialTwin'
       return:
         type:
-          - '@azure-iot-provisioning-service.InitialTwin'
+          - azure-iot-provisioning-service.InitialTwin
   - uid: azure-iot-provisioning-service.IndividualEnrollment.iotHubHostName
     name: iotHubHostName
     fullName: iotHubHostName
@@ -138,7 +138,7 @@ items:
       content: 'provisioningStatus: ProvisioningStatus'
       return:
         type:
-          - '@azure-iot-provisioning-service.ProvisioningStatus'
+          - azure-iot-provisioning-service.ProvisioningStatus
   - uid: azure-iot-provisioning-service.IndividualEnrollment.registrationId
     name: registrationId
     fullName: registrationId
@@ -166,4 +166,25 @@ items:
       content: 'registrationState: DeviceRegistrationState'
       return:
         type:
-          - '@azure-iot-provisioning-service.DeviceRegistrationState'
+          - azure-iot-provisioning-service.DeviceRegistrationState
+references:
+  - uid: azure-iot-provisioning-service.AttestationMechanism
+    spec.typeScript:
+      - name: AttestationMechanism
+        fullName: AttestationMechanism
+        uid: azure-iot-provisioning-service.AttestationMechanism
+  - uid: azure-iot-provisioning-service.InitialTwin
+    spec.typeScript:
+      - name: InitialTwin
+        fullName: InitialTwin
+        uid: azure-iot-provisioning-service.InitialTwin
+  - uid: azure-iot-provisioning-service.ProvisioningStatus
+    spec.typeScript:
+      - name: ProvisioningStatus
+        fullName: ProvisioningStatus
+        uid: azure-iot-provisioning-service.ProvisioningStatus
+  - uid: azure-iot-provisioning-service.DeviceRegistrationState
+    spec.typeScript:
+      - name: DeviceRegistrationState
+        fullName: DeviceRegistrationState
+        uid: azure-iot-provisioning-service.DeviceRegistrationState
