--- a/docs-ref-autogen/azure-iot-provisioning-service/X509Attestation.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/X509Attestation.yml
@@ -26,7 +26,7 @@ items:
       content: 'caReferences: X509CAReferences'
       return:
         type:
-          - '@azure-iot-provisioning-service.X509CAReferences'
+          - azure-iot-provisioning-service.X509CAReferences
   - uid: azure-iot-provisioning-service.X509Attestation.clientCertificates
     name: clientCertificates
     fullName: clientCertificates
@@ -41,7 +41,7 @@ items:
       content: 'clientCertificates: X509Certificates'
       return:
         type:
-          - '@azure-iot-provisioning-service.X509Certificates'
+          - azure-iot-provisioning-service.X509Certificates
   - uid: azure-iot-provisioning-service.X509Attestation.signingCertificates
     name: signingCertificates
     fullName: signingCertificates
@@ -58,4 +58,15 @@ items:
       content: 'signingCertificates: X509Certificates'
       return:
         type:
-          - '@azure-iot-provisioning-service.X509Certificates'
+          - azure-iot-provisioning-service.X509Certificates
+references:
+  - uid: azure-iot-provisioning-service.X509CAReferences
+    spec.typeScript:
+      - name: X509CAReferences
+        fullName: X509CAReferences
+        uid: azure-iot-provisioning-service.X509CAReferences
+  - uid: azure-iot-provisioning-service.X509Certificates
+    spec.typeScript:
+      - name: X509Certificates
+        fullName: X509Certificates
+        uid: azure-iot-provisioning-service.X509Certificates
