--- a/docs-ref-autogen/azure-iothub/AmqpWs.yml
+++ b/docs-ref-autogen/azure-iothub/AmqpWs.yml
@@ -17,5 +17,11 @@ items:
       [fromConnectionString](xref:azure-iothub.Client.fromConnectionString) or
       [fromSharedAccessSignature](xref:azure-iothub.Client.fromSharedAccessSignature).
     extends:
-      name: '@azure-iothub.Amqp'
+      name: azure-iothub.Amqp
     package: azure-iothub
+references:
+  - uid: azure-iothub.Amqp
+    spec.typeScript:
+      - name: Amqp
+        fullName: Amqp
+        uid: azure-iothub.Amqp
