--- a/docs-ref-autogen/azure-iothub/Device.yml
+++ b/docs-ref-autogen/azure-iothub/Device.yml
@@ -94,7 +94,7 @@ items:
       content: 'authentication?: Authentication'
       return:
         type:
-          - '@azure-iothub.Device.Authentication'
+          - azure-iothub.Device.Authentication
   - uid: azure-iothub.Device.cloudToDeviceMessageCount
     name: cloudToDeviceMessageCount
     fullName: cloudToDeviceMessageCount
@@ -133,7 +133,7 @@ items:
       content: 'connectionState?: ConnectionState'
       return:
         type:
-          - '@azure-iothub.Device.ConnectionState'
+          - azure-iothub.Device.ConnectionState
   - uid: azure-iothub.Device.connectionStateUpdatedTime
     name: connectionStateUpdatedTime
     fullName: connectionStateUpdatedTime
@@ -224,7 +224,7 @@ items:
       content: 'status?: DeviceStatus'
       return:
         type:
-          - '@azure-iothub.Device.DeviceStatus'
+          - azure-iothub.Device.DeviceStatus
   - uid: azure-iothub.Device.statusReason
     name: statusReason
     fullName: statusReason
