--- a/docs-ref-autogen/azure-iothub/Registry.RegistryStatistics.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.RegistryStatistics.yml
@@ -51,3 +51,13 @@ items:
       return:
         type:
           - number
+references:
+  - uid: 'Callback<azure-iothub.Twin[]>'
+    spec.typeScript:
+      - name: Callback<
+        fullName: Callback<
+      - name: Twin
+        fullName: Twin
+        uid: azure-iothub.Twin
+      - name: '[]>'
+        fullName: '[]>'
