--- a/docs-ref-autogen/azure-iot-common/CloudToDeviceDetachedError.yml
+++ b/docs-ref-autogen/azure-iot-common/CloudToDeviceDetachedError.yml
@@ -57,3 +57,9 @@ items:
       return:
         type:
           - ErrorConstructor
+references:
+  - uid: azure-iot-common.ConnectionString
+    spec.typeScript:
+      - name: ConnectionString
+        fullName: ConnectionString
+        uid: azure-iot-common.ConnectionString
