--- a/docs-ref-autogen/azure-iot-common/Message.yml
+++ b/docs-ref-autogen/azure-iot-common/Message.yml
@@ -54,7 +54,7 @@ items:
       parameters:
         - id: data
           type:
-            - '@azure-iot-common.Message.BufferConvertible'
+            - azure-iot-common.Message.BufferConvertible
           description: >
             a Node
             [Buffer](https://nodejs.org/api/globals.html#globals_class_buffer)
@@ -187,7 +187,7 @@ items:
       content: 'properties: Properties'
       return:
         type:
-          - '@azure-iot-common.Properties'
+          - azure-iot-common.Properties
   - uid: azure-iot-common.Message.to
     name: to
     fullName: to
@@ -241,4 +241,4 @@ items:
       parameters: []
       return:
         type:
-          - '@azure-iot-common.Message.BufferConvertible'
+          - azure-iot-common.Message.BufferConvertible
