--- a/docs-ref-autogen/azure-iot-device-mqtt/MqttWs.yml
+++ b/docs-ref-autogen/azure-iot-device-mqtt/MqttWs.yml
@@ -14,5 +14,11 @@ items:
       This class is not meant to be used directly, instead it should just be
       passed to the [client](xref:azure-iot-device.Client) object.
     extends:
-      name: '@azure-iot-device-mqtt.Mqtt'
+      name: azure-iot-device-mqtt.Mqtt
     package: azure-iot-device-mqtt
+references:
+  - uid: azure-iot-device-mqtt.Mqtt
+    spec.typeScript:
+      - name: Mqtt
+        fullName: Mqtt
+        uid: azure-iot-device-mqtt.Mqtt
