--- a/docs-ref-autogen/azure-iot-device/Client.BlobUpload.yml
+++ b/docs-ref-autogen/azure-iot-device/Client.BlobUpload.yml
@@ -53,3 +53,24 @@ items:
           type:
             - '(err?: Error) => void'
           description: ''
+references:
+  - uid: azure-iot-device.DeviceMethodResponse
+    spec.typeScript:
+      - name: DeviceMethodResponse
+        fullName: DeviceMethodResponse
+        uid: azure-iot-device.DeviceMethodResponse
+  - uid: azure-iot-device.DeviceClientOptions
+    spec.typeScript:
+      - name: DeviceClientOptions
+        fullName: DeviceClientOptions
+        uid: azure-iot-device.DeviceClientOptions
+  - uid: azure-iot-device.Client.Transport
+    spec.typeScript:
+      - name: Transport
+        fullName: Transport
+        uid: azure-iot-device.Client.Transport
+  - uid: azure-iot-device.Client
+    spec.typeScript:
+      - name: Client
+        fullName: Client
+        uid: azure-iot-device.Client
