--- a/docs-ref-autogen/azure-iot-device/Client.Transport.yml
+++ b/docs-ref-autogen/azure-iot-device/Client.Transport.yml
@@ -384,7 +384,7 @@ items:
       parameters:
         - id: response
           type:
-            - '@azure-iot-device.DeviceMethodResponse'
+            - azure-iot-device.DeviceMethodResponse
           description: ''
         - id: done
           type:
@@ -405,7 +405,7 @@ items:
       parameters:
         - id: options
           type:
-            - '@azure-iot-device.DeviceClientOptions'
+            - azure-iot-device.DeviceClientOptions
           description: ''
         - id: done
           type:
@@ -451,3 +451,24 @@ items:
           type:
             - '(err?: Error) => void'
           description: ''
+references:
+  - uid: azure-iot-device.DeviceMethodResponse
+    spec.typeScript:
+      - name: DeviceMethodResponse
+        fullName: DeviceMethodResponse
+        uid: azure-iot-device.DeviceMethodResponse
+  - uid: azure-iot-device.DeviceClientOptions
+    spec.typeScript:
+      - name: DeviceClientOptions
+        fullName: DeviceClientOptions
+        uid: azure-iot-device.DeviceClientOptions
+  - uid: azure-iot-device.Client.Transport
+    spec.typeScript:
+      - name: Transport
+        fullName: Transport
+        uid: azure-iot-device.Client.Transport
+  - uid: azure-iot-device.Client
+    spec.typeScript:
+      - name: Client
+        fullName: Client
+        uid: azure-iot-device.Client
