--- a/docs-ref-autogen/azure-iot-device/DeviceMethodResponse.yml
+++ b/docs-ref-autogen/azure-iot-device/DeviceMethodResponse.yml
@@ -39,7 +39,7 @@ items:
           description: ''
         - id: transport
           type:
-            - '@azure-iot-device.Client.Transport'
+            - azure-iot-device.Client.Transport
           description: ''
   - uid: azure-iot-device.DeviceMethodResponse.isResponseComplete
     name: isResponseComplete
