--- a/docs-ref-autogen/azure-iot-device/HttpTransportOptions.yml
+++ b/docs-ref-autogen/azure-iot-device/HttpTransportOptions.yml
@@ -46,4 +46,4 @@ items:
       content: 'receivePolicy?: HttpReceiverOptions'
       return:
         type:
-          - '@azure-iot-device.HttpReceiverOptions'
+          - azure-iot-device.HttpReceiverOptions
