--- a/docs-ref-autogen/azure-iot-provisioning-device-amqp/AmqpWs.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device-amqp/AmqpWs.yml
@@ -9,5 +9,11 @@ items:
     type: class
     summary: Transport used to provision a device over AMQP over Websockets.
     extends:
-      name: '@azure-iot-provisioning-device-amqp.Amqp'
+      name: azure-iot-provisioning-device-amqp.Amqp
     package: azure-iot-provisioning-device-amqp
+references:
+  - uid: azure-iot-provisioning-device-amqp.Amqp
+    spec.typeScript:
+      - name: Amqp
+        fullName: Amqp
+        uid: azure-iot-provisioning-device-amqp.Amqp
