--- a/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationResult.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationResult.yml
@@ -40,7 +40,7 @@ items:
       content: 'registrationState?: DeviceRegistrationState'
       return:
         type:
-          - '@azure-iot-provisioning-device.DeviceRegistrationState'
+          - azure-iot-provisioning-device.DeviceRegistrationState
   - uid: azure-iot-provisioning-device.DeviceRegistrationResult.status
     name: status
     fullName: status
@@ -53,4 +53,15 @@ items:
       content: 'status: RegistrationStatus'
       return:
         type:
-          - '@azure-iot-provisioning-device.RegistrationStatus'
+          - azure-iot-provisioning-device.RegistrationStatus
+references:
+  - uid: azure-iot-provisioning-device.DeviceRegistrationState
+    spec.typeScript:
+      - name: DeviceRegistrationState
+        fullName: DeviceRegistrationState
+        uid: azure-iot-provisioning-device.DeviceRegistrationState
+  - uid: azure-iot-provisioning-device.RegistrationStatus
+    spec.typeScript:
+      - name: RegistrationStatus
+        fullName: RegistrationStatus
+        uid: azure-iot-provisioning-device.RegistrationStatus
