--- a/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationState.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/DeviceRegistrationState.yml
@@ -50,4 +50,10 @@ items:
       content: 'status: RegistrationStatus'
       return:
         type:
-          - '@azure-iot-provisioning-device.RegistrationStatus'
+          - azure-iot-provisioning-device.RegistrationStatus
+references:
+  - uid: azure-iot-provisioning-device.RegistrationStatus
+    spec.typeScript:
+      - name: RegistrationStatus
+        fullName: RegistrationStatus
+        uid: azure-iot-provisioning-device.RegistrationStatus
