--- a/docs-ref-autogen/azure-iot-provisioning-device/X509Registration.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-device/X509Registration.yml
@@ -39,7 +39,7 @@ items:
           description: ''
         - id: securityClient
           type:
-            - '@azure-iot-provisioning-device.X509SecurityClient'
+            - azure-iot-provisioning-device.X509SecurityClient
           description: ''
   - uid: azure-iot-provisioning-device.X509Registration.cancel
     name: cancel
@@ -73,3 +73,9 @@ items:
             - '(err?: Error, result?: RegistrationResult) => void'
           description: |
             function called when registration is complete.
+references:
+  - uid: azure-iot-provisioning-device.X509SecurityClient
+    spec.typeScript:
+      - name: X509SecurityClient
+        fullName: X509SecurityClient
+        uid: azure-iot-provisioning-device.X509SecurityClient
