--- a/docs-ref-autogen/azure-iot-provisioning-service/BulkEnrollmentOperation.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/BulkEnrollmentOperation.yml
@@ -27,7 +27,7 @@ items:
       content: 'enrollments: Array<IndividualEnrollment>'
       return:
         type:
-          - Array<@azure-iot-provisioning-service.IndividualEnrollment>
+          - Array<azure-iot-provisioning-service.IndividualEnrollment>
   - uid: azure-iot-provisioning-service.BulkEnrollmentOperation.mode
     name: mode
     fullName: mode
@@ -42,4 +42,19 @@ items:
       content: 'mode: BulkOperationMode'
       return:
         type:
-          - '@azure-iot-provisioning-service.BulkOperationMode'
+          - azure-iot-provisioning-service.BulkOperationMode
+references:
+  - uid: Array<azure-iot-provisioning-service.IndividualEnrollment>
+    spec.typeScript:
+      - name: Array<
+        fullName: Array<
+      - name: IndividualEnrollment
+        fullName: IndividualEnrollment
+        uid: azure-iot-provisioning-service.IndividualEnrollment
+      - name: '>'
+        fullName: '>'
+  - uid: azure-iot-provisioning-service.BulkOperationMode
+    spec.typeScript:
+      - name: BulkOperationMode
+        fullName: BulkOperationMode
+        uid: azure-iot-provisioning-service.BulkOperationMode
