--- a/docs-ref-autogen/azure-iot-provisioning-service/DeviceRegistrationState.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/DeviceRegistrationState.yml
@@ -141,4 +141,10 @@ items:
       content: 'status: RegistrationStatus'
       return:
         type:
-          - '@azure-iot-provisioning-service.RegistrationStatus'
+          - azure-iot-provisioning-service.RegistrationStatus
+references:
+  - uid: azure-iot-provisioning-service.RegistrationStatus
+    spec.typeScript:
+      - name: RegistrationStatus
+        fullName: RegistrationStatus
+        uid: azure-iot-provisioning-service.RegistrationStatus
