--- a/docs-ref-autogen/azure-iot-provisioning-service/EnrollmentGroup.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/EnrollmentGroup.yml
@@ -31,7 +31,7 @@ items:
       content: 'attestation: AttestationMechanism'
       return:
         type:
-          - '@azure-iot-provisioning-service.AttestationMechanism'
+          - azure-iot-provisioning-service.AttestationMechanism
   - uid: azure-iot-provisioning-service.EnrollmentGroup.createdDateTimeUtc
     name: createdDateTimeUtc
     fullName: createdDateTimeUtc
@@ -89,7 +89,7 @@ items:
       content: 'initialTwin: InitialTwin'
       return:
         type:
-          - '@azure-iot-provisioning-service.InitialTwin'
+          - azure-iot-provisioning-service.InitialTwin
   - uid: azure-iot-provisioning-service.EnrollmentGroup.iotHubHostName
     name: iotHubHostName
     fullName: iotHubHostName
@@ -134,4 +134,20 @@ items:
       content: 'provisioningStatus: ProvisioningStatus'
       return:
         type:
-          - '@azure-iot-provisioning-service.ProvisioningStatus'
+          - azure-iot-provisioning-service.ProvisioningStatus
+references:
+  - uid: azure-iot-provisioning-service.AttestationMechanism
+    spec.typeScript:
+      - name: AttestationMechanism
+        fullName: AttestationMechanism
+        uid: azure-iot-provisioning-service.AttestationMechanism
+  - uid: azure-iot-provisioning-service.InitialTwin
+    spec.typeScript:
+      - name: InitialTwin
+        fullName: InitialTwin
+        uid: azure-iot-provisioning-service.InitialTwin
+  - uid: azure-iot-provisioning-service.ProvisioningStatus
+    spec.typeScript:
+      - name: ProvisioningStatus
+        fullName: ProvisioningStatus
+        uid: azure-iot-provisioning-service.ProvisioningStatus
