--- a/docs-ref-autogen/azure-iot-provisioning-service/X509Certificates.yml
+++ b/docs-ref-autogen/azure-iot-provisioning-service/X509Certificates.yml
@@ -25,7 +25,7 @@ items:
       content: 'primary: X509CertificateWithInfo'
       return:
         type:
-          - '@azure-iot-provisioning-service.X509CertificateWithInfo'
+          - azure-iot-provisioning-service.X509CertificateWithInfo
   - uid: azure-iot-provisioning-service.X509Certificates.secondary
     name: secondary
     fullName: secondary
@@ -41,4 +41,10 @@ items:
       content: 'secondary: X509CertificateWithInfo'
       return:
         type:
-          - '@azure-iot-provisioning-service.X509CertificateWithInfo'
+          - azure-iot-provisioning-service.X509CertificateWithInfo
+references:
+  - uid: azure-iot-provisioning-service.X509CertificateWithInfo
+    spec.typeScript:
+      - name: X509CertificateWithInfo
+        fullName: X509CertificateWithInfo
+        uid: azure-iot-provisioning-service.X509CertificateWithInfo
