--- a/docs-ref-autogen/azure-iothub/Client.Transport.yml
+++ b/docs-ref-autogen/azure-iothub/Client.Transport.yml
@@ -28,7 +28,7 @@ items:
       parameters:
         - id: done
           type:
-            - '@azure-iothub.Client.Callback<Connected>'
+            - azure-iothub.Client.Callback<Connected>
           description: ''
           optional: true
   - uid: azure-iothub.Client.Transport.disconnect
@@ -43,7 +43,7 @@ items:
       parameters:
         - id: done
           type:
-            - '@azure-iothub.Client.Callback<Disconnected>'
+            - azure-iothub.Client.Callback<Disconnected>
           description: ''
   - uid: azure-iothub.Client.Transport.getFeedbackReceiver
     name: getFeedbackReceiver
@@ -57,8 +57,7 @@ items:
       parameters:
         - id: done
           type:
-            - >-
-              @azure-iothub.Client.Callback<@azure-iothub.Client.ServiceReceiver>
+            - azure-iothub.Client.Callback<azure-iothub.Client.ServiceReceiver>
           description: ''
   - uid: azure-iothub.Client.Transport.getFileNotificationReceiver
     name: getFileNotificationReceiver
@@ -72,8 +71,7 @@ items:
       parameters:
         - id: done
           type:
-            - >-
-              @azure-iothub.Client.Callback<@azure-iothub.Client.ServiceReceiver>
+            - azure-iothub.Client.Callback<azure-iothub.Client.ServiceReceiver>
           description: ''
   - uid: azure-iothub.Client.Transport.send
     name: send
@@ -97,6 +95,83 @@ items:
           description: ''
         - id: done
           type:
-            - '@azure-iothub.Client.Callback<MessageEnqueued>'
+            - azure-iothub.Client.Callback<MessageEnqueued>
           description: ''
           optional: true
+references:
+  - uid: azure-iothub.Client.Callback<MessageAbandoned>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageAbandoned>
+        fullName: <MessageAbandoned>
+  - uid: azure-iothub.Client.Callback<MessageCompleted>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageCompleted>
+        fullName: <MessageCompleted>
+  - uid: azure-iothub.Client.Callback<MessageRejected>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageRejected>
+        fullName: <MessageRejected>
+  - uid: azure-iothub.Client.Callback<Connected>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <Connected>
+        fullName: <Connected>
+  - uid: azure-iothub.Client.Callback<Disconnected>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <Disconnected>
+        fullName: <Disconnected>
+  - uid: azure-iothub.Client.Callback<azure-iothub.Client.ServiceReceiver>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <
+        fullName: <
+      - name: ServiceReceiver
+        fullName: ServiceReceiver
+        uid: azure-iothub.Client.ServiceReceiver
+      - name: '>'
+        fullName: '>'
+  - uid: azure-iothub.Client.Callback<MessageEnqueued>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageEnqueued>
+        fullName: <MessageEnqueued>
+  - uid: azure-iothub.DeviceMethodParams
+    spec.typeScript:
+      - name: DeviceMethodParams
+        fullName: DeviceMethodParams
+        uid: azure-iothub.DeviceMethodParams
+  - uid: azure-iothub.Client.Callback<any>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <any>
+        fullName: <any>
+  - uid: azure-iothub.Client.TransportCtor
+    spec.typeScript:
+      - name: TransportCtor
+        fullName: TransportCtor
+        uid: azure-iothub.Client.TransportCtor
+  - uid: azure-iothub.Client
+    spec.typeScript:
+      - name: Client
+        fullName: Client
+        uid: azure-iothub.Client
