--- a/docs-ref-autogen/azure-iothub/Device.Authentication.yml
+++ b/docs-ref-autogen/azure-iothub/Device.Authentication.yml
@@ -53,4 +53,4 @@ items:
       content: 'x509Thumbprint?: X509Thumbprints'
       return:
         type:
-          - '@azure-iothub.Device.X509Thumbprints'
+          - azure-iothub.Device.X509Thumbprints
