--- a/docs-ref-autogen/azure-iothub/JobClient.yml
+++ b/docs-ref-autogen/azure-iothub/JobClient.yml
@@ -53,7 +53,7 @@ items:
           description: The identifier of an existing job.
         - id: done
           type:
-            - '@azure-iothub.JobClient.JobCallback'
+            - azure-iothub.JobClient.JobCallback
           description: |
             The function to call when the operation is
                                            complete. `done` will be called with three
@@ -76,12 +76,12 @@ items:
       parameters:
         - id: jobType
           type:
-            - '@azure-iothub.JobType'
+            - azure-iothub.JobType
           description: The type that should be used to filter results.
           optional: true
         - id: jobStatus
           type:
-            - '@azure-iothub.JobStatus'
+            - azure-iothub.JobStatus
           description: The status that should be used to filter results.
           optional: true
         - id: pageSize
@@ -92,7 +92,7 @@ items:
           optional: true
       return:
         type:
-          - '@azure-iothub.Query'
+          - azure-iothub.Query
   - uid: azure-iothub.JobClient.getJob
     name: getJob
     children: []
@@ -109,7 +109,7 @@ items:
           description: The identifier of an existing job.
         - id: done
           type:
-            - '@azure-iothub.JobClient.JobCallback'
+            - azure-iothub.JobClient.JobCallback
           description: |
             The function to call when the operation is
                                            complete. `done` will be called with three
@@ -126,8 +126,9 @@ items:
     syntax:
       content: >-
         function scheduleDeviceMethod(jobId: string | number, queryCondition:
-        string, methodParams: DeviceMethodParams, jobStartTime?: JobCallback,
-        maxExecutionTimeInSeconds?: JobCallback, done?: JobCallback)
+        string, methodParams: DeviceMethodParams, jobStartTime?: Date |
+        JobCallback, maxExecutionTimeInSeconds?: number | JobCallback, done?:
+        JobCallback)
       parameters:
         - id: jobId
           type:
@@ -141,7 +142,7 @@ items:
                                                  on which this job should be run.
         - id: methodParams
           type:
-            - '@azure-iothub.DeviceMethodParams'
+            - azure-iothub.DeviceMethodParams
           description: >-
             An object describing the method and shall have the following
             properties:
@@ -150,17 +151,17 @@ items:
                                                  - responseTimeoutInSeconds [optional] The number of seconds IoT Hub shall wait for the device
         - id: jobStartTime
           type:
-            - JobCallback
+            - Date | azure-iothub.JobClient.JobCallback
           description: Time time at which the job should start
           optional: true
         - id: maxExecutionTimeInSeconds
           type:
-            - JobCallback
+            - number | azure-iothub.JobClient.JobCallback
           description: The maximum time alloted for this job to run in seconds.
           optional: true
         - id: done
           type:
-            - '@azure-iothub.JobClient.JobCallback'
+            - azure-iothub.JobClient.JobCallback
           description: |
             The function to call when the operation is
                                                  complete. `done` will be called with three
@@ -190,8 +191,8 @@ items:
     syntax:
       content: >-
         function scheduleTwinUpdate(jobId: string | number, queryCondition:
-        string, patch: any, jobStartTime?: JobCallback,
-        maxExecutionTimeInSeconds?: JobCallback, done?: JobCallback)
+        string, patch: any, jobStartTime?: Date | JobCallback,
+        maxExecutionTimeInSeconds?: number | JobCallback, done?: JobCallback)
       parameters:
         - id: jobId
           type:
@@ -209,17 +210,17 @@ items:
           description: The twin patch that should be applied to the twins.
         - id: jobStartTime
           type:
-            - JobCallback
+            - Date | azure-iothub.JobClient.JobCallback
           description: Time time at which the job should start
           optional: true
         - id: maxExecutionTimeInSeconds
           type:
-            - JobCallback
+            - number | azure-iothub.JobClient.JobCallback
           description: The maximum time alloted for this job to run in seconds.
           optional: true
         - id: done
           type:
-            - '@azure-iothub.JobClient.JobCallback'
+            - azure-iothub.JobClient.JobCallback
           description: |
             The function to call when the operation is
                                                  complete. `done` will be called with three
@@ -254,7 +255,7 @@ items:
                                                               permissions.
       return:
         type:
-          - '@azure-iothub.JobClient'
+          - azure-iothub.JobClient
     exceptions:
       - type: ReferenceError
         description: |
@@ -278,7 +279,7 @@ items:
                                                          permissions.
       return:
         type:
-          - '@azure-iothub.JobClient'
+          - azure-iothub.JobClient
     exceptions:
       - type: ReferenceError
         description: |
