--- a/docs-ref-autogen/azure-iothub/Query.yml
+++ b/docs-ref-autogen/azure-iothub/Query.yml
@@ -56,12 +56,12 @@ items:
     summary: Gets the next page of results for this query.
     syntax:
       content: >-
-        function next(continuationTokenOrCallback: string | Callback, done?:
-        Callback<any>)
+        function next(continuationTokenOrCallback: string | Callback<any>,
+        done?: Callback<any>)
       parameters:
         - id: continuationTokenOrCallback
           type:
-            - string | Callback
+            - string | Callback<any>
           description: ''
         - id: done
           type:
@@ -79,16 +79,16 @@ items:
     summary: Gets the next page of results for this query and cast them as Twins.
     syntax:
       content: >-
-        function nextAsTwin(continuationToken: string | Callback, done?:
+        function nextAsTwin(continuationToken: string | Callback<Twin[]>, done?:
         Callback<Twin[]>)
       parameters:
         - id: continuationToken
           type:
-            - string | Callback
+            - 'string | Twin!@[]>'
           description: Continuation Token used for paging through results (optional)
         - id: done
           type:
-            - 'Callback<@azure-iothub.Twin[]>'
+            - 'Callback<azure-iothub.Twin[]>'
           description: |
             The callback that will be called with either an Error object or
                                                       the results of the query.
