--- a/docs-ref-autogen/azure-iothub/Registry.QueryDescription.yml
+++ b/docs-ref-autogen/azure-iothub/Registry.QueryDescription.yml
@@ -23,3 +23,13 @@ items:
       return:
         type:
           - string
+references:
+  - uid: 'Callback<azure-iothub.Twin[]>'
+    spec.typeScript:
+      - name: Callback<
+        fullName: Callback<
+      - name: Twin
+        fullName: Twin
+        uid: azure-iothub.Twin
+      - name: '[]>'
+        fullName: '[]>'
