--- a/docs-ref-autogen/azure-iothub/ServiceReceiver.yml
+++ b/docs-ref-autogen/azure-iothub/ServiceReceiver.yml
@@ -47,7 +47,7 @@ items:
           description: ''
         - id: done
           type:
-            - '@azure-iothub.Client.Callback<MessageAbandoned>'
+            - azure-iothub.Client.Callback<MessageAbandoned>
           description: ''
           optional: true
   - uid: azure-iothub.ServiceReceiver.complete
@@ -66,7 +66,7 @@ items:
           description: ''
         - id: done
           type:
-            - '@azure-iothub.Client.Callback<MessageCompleted>'
+            - azure-iothub.Client.Callback<MessageCompleted>
           description: ''
           optional: true
   - uid: azure-iothub.ServiceReceiver.detach
@@ -114,6 +114,74 @@ items:
           description: ''
         - id: done
           type:
-            - '@azure-iothub.Client.Callback<MessageRejected>'
+            - azure-iothub.Client.Callback<MessageRejected>
           description: ''
           optional: true
+references:
+  - uid: 'azure-iothub.Registry.DeviceRegistryOperationError[]'
+    spec.typeScript:
+      - name: DeviceRegistryOperationError
+        fullName: DeviceRegistryOperationError
+        uid: azure-iothub.Registry.DeviceRegistryOperationError
+      - name: '[]'
+        fullName: '[]'
+  - uid: 'azure-iothub.Registry.DeviceDescription[]'
+    spec.typeScript:
+      - name: DeviceDescription
+        fullName: DeviceDescription
+        uid: azure-iothub.Registry.DeviceDescription
+      - name: '[]'
+        fullName: '[]'
+  - uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+    spec.typeScript:
+      - name: BulkDeviceIdentityCallback
+        fullName: BulkDeviceIdentityCallback
+        uid: azure-iothub.Registry.BulkDeviceIdentityCallback
+  - uid: azure-iothub.Registry.JobCallback
+    spec.typeScript:
+      - name: JobCallback
+        fullName: JobCallback
+        uid: azure-iothub.Registry.JobCallback
+  - uid: azure-iothub.Registry.DeviceDescription
+    spec.typeScript:
+      - name: DeviceDescription
+        fullName: DeviceDescription
+        uid: azure-iothub.Registry.DeviceDescription
+  - uid: azure-iothub.Registry.DeviceCallback
+    spec.typeScript:
+      - name: DeviceCallback
+        fullName: DeviceCallback
+        uid: azure-iothub.Registry.DeviceCallback
+  - uid: azure-iothub.Query
+    spec.typeScript:
+      - name: Query
+        fullName: Query
+        uid: azure-iothub.Query
+  - uid: azure-iothub.Registry.ResponseCallback
+    spec.typeScript:
+      - name: ResponseCallback
+        fullName: ResponseCallback
+        uid: azure-iothub.Registry.ResponseCallback
+  - uid: Callback<azure-iothub.Registry.RegistryStatistics>
+    spec.typeScript:
+      - name: Callback<
+        fullName: Callback<
+      - name: RegistryStatistics
+        fullName: RegistryStatistics
+        uid: azure-iothub.Registry.RegistryStatistics
+      - name: '>'
+        fullName: '>'
+  - uid: 'Callback<azure-iothub.Device[]>'
+    spec.typeScript:
+      - name: Callback<
+        fullName: Callback<
+      - name: Device
+        fullName: Device
+        uid: azure-iothub.Device
+      - name: '[]>'
+        fullName: '[]>'
+  - uid: azure-iothub.Registry
+    spec.typeScript:
+      - name: Registry
+        fullName: Registry
+        uid: azure-iothub.Registry
