--- a/docs-ref-autogen/azure-iothub/Twin.yml
+++ b/docs-ref-autogen/azure-iothub/Twin.yml
@@ -59,7 +59,7 @@ items:
                                                 it must contain a deviceId property.
         - id: registryClient
           type:
-            - '@azure-iothub.Registry'
+            - azure-iothub.Registry
           description: |
             The HTTP registry client used to execute REST API calls.
   - uid: azure-iothub.Twin.deviceId
@@ -134,7 +134,7 @@ items:
       parameters:
         - id: done
           type:
-            - Callback<@azure-iothub.Twin>
+            - Callback<azure-iothub.Twin>
           description: |
             The function to call when the operation is
                                            complete. `done` will be called with three
@@ -172,7 +172,7 @@ items:
           description: Object containing the new values to apply to this device twin.
         - id: done
           type:
-            - Callback<@azure-iothub.Twin>
+            - Callback<azure-iothub.Twin>
           description: |
             The function to call when the operation is
                                            complete. `done` will be called with three
@@ -181,3 +181,25 @@ items:
                                            object representing the created device
                                            identity, and a transport-specific response
                                            object useful for logging or debugging.
+references:
+  - uid: azure-iothub.Client.Callback<MessageAbandoned>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageAbandoned>
+        fullName: <MessageAbandoned>
+  - uid: azure-iothub.Client.Callback<MessageCompleted>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageCompleted>
+        fullName: <MessageCompleted>
+  - uid: azure-iothub.Client.Callback<MessageRejected>
+    spec.typeScript:
+      - name: Callback
+        fullName: Callback
+        uid: azure-iothub.Client.Callback
+      - name: <MessageRejected>
+        fullName: <MessageRejected>
